shortened a little more

--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -71,7 +71,7 @@ Our model adopts the same utility-theoretic approach, and assumes an agent who r
 
 We instantiate our model in a simple causal learning task and 
 examine how people choose actions that support learning vs. social goals. 
-We present a toy with an uncertain causal mechanism (Figure \ref{fig:toy}), 
+We present a toy with an uncertain causal mechanism (Fig \ref{fig:toy}), 
 for which doing only one of the two possible actions (handle pull or button press) is disambiguating but potentially risks no immediate effect (i.e. neither sound nor light turning on), 
 while doing both actions simultaneously is immediately rewarding but is not informative for learning the toy's causal mechanism. Thus, the learner can choose between the two actions
 that will each lead to one outcome (new discovery; learning) or the other (immediate reward; performance).
@@ -100,7 +100,7 @@ grid.arrange(img1, img2, ncol = 2)
 We model a learner's action choice based on 
 his goal to learn how a toy works (*learning utility*), 
 to make the toy perform a function (*performance utility*), 
-or to present himself as competent and knowledgeable about how the toy works (*presentational utility*; see Figure \ref{fig:model_diagram}).
+or to present himself as competent and knowledgeable about how the toy works (*presentational utility*; see Fig \ref{fig:model_diagram}).
 
 ### Learning utility
 
@@ -125,11 +125,11 @@ $$ U_{perf} = P_L(m | a) $$
 When there is no observer present ($obs = no$), the learner considers the tradeoff between the learning utility and performance utility, and he determines his action based on a weighted combination of the two utilities: 
 $$ U(\phi; obs = no) = \phi_{learn} \cdot U_{learn} + \phi_{perf} \cdot U_{perf} ,$$
 \noindent
-where $\phi$ is a parameter governing how much value the learner places on each goal. 
+where $\phi$ is how much value the learner places on each goal. 
 
 ### Presentation utility
 
-When there is another person present to observe the learner's action, this observer $O$ is expected to reason about the competence $c$ of the learner $L$ which is equal to whether the learner was able to make the toy produce an effect.
+When there is another person present to observe the learner's action, the observer $O$ is expected to reason about the learner $L$'s competence $c$, equal to whether the learner was able to make the toy produce an effect.
 The learner thinks about the observer's inferential process, and the expected *presentational* utility ($U_{pres}$) is based on maximizing the apparent competence inferred by the observer.
 $$ P_O(c) \propto P_L(m | a)$$
 $$ U_{pres} = P_O(c)$$
@@ -180,7 +180,7 @@ We recruited `r n_run` participants (45-51 per condition) on Amazon’s Mechanic
 
 ### Stimuli and Design
 
-We presented images and instructions for three different toys that looked very similar but worked in different ways (see captions for Figure \ref{fig:model_diagram}).
+We presented images and instructions for three different toys that looked very similar but worked in different ways (see captions for Fig \ref{fig:model_diagram}).
 The instructions conveyed that pressing the button and pulling the handle was immediately rewarding but uninformative (fails to disambiguate the causal mechanism). In contrast, either of the single actions was completely disambiguating, but was uncertain to produce an immediate outcome. Each toy had a label at the front, indicating the correct action(s)--outcome link.
 
 We asked participants to act on one of these toys; importantly, the given toy was missing its label, leading to uncertainty about its causal structure. We randomly assigned participants into four goal conditions. In the *No-Goal* condition we did not specify any goal for participants. In the *Learning*, *Performance*, and *Presentation* conditions, we asked participants to imagine they were toy developers and one day their boss approached them. We instructed participants to: figure out the correct label for the toy (*Learning*); make the toy play music (or turn the light on; *Performance*); or impress their boss and show that they are competent (*Presentation*). We asked participants to select an action out of the following set: "press the button", "pull the handle", or "press the button and pull the handle." The order of actions was randomized.
@@ -223,7 +223,7 @@ ms_act_e1 <- d_models$action_logit_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition$} with the No-goal condition as the reference category\footnote{In all of the analyses for E1 and E2, we used the `rstanarm` [@gabry2016rstanarm] package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model. }. Participants' tendency to select a "single" action varied across conditions as predicted (see Figure \ref{fig:e1_behav_results_plot}A), with the highest proportion occuring in the Learning condition, followed by No-goal, Performance, and Presentation. 
+We modeled action decisions using a logistic regression \texttt{$action \sim goal\_condition$} with the No-goal condition as the reference category.\footnote{In all of the analyses for E1 and E2, we used the {\fontfamily{qcr}\selectfont rstanarm} package to fit Bayesian regression models estimating the differences across conditions. We report the uncertainty in our point estimates using 95\% Highest Density Intervals (HDI). The HDI provides a range of credible values given the data and model.} Participants' tendency to select a "single" action varied across conditions as predicted (Fig \ref{fig:e1_behav_results_plot}A), with the highest proportion in the Learning condition, followed by No-goal, Performance, and Presentation. 
 
 Compared to the No-goal condition, participants selected the single action at a greater rate in the Learning condition ($\beta$ = `r e1_contrasts_act$prop[1]`, [`r e1_contrasts_act$hdi_lower[1]`, `r e1_contrasts_act$hdi_upper[1]`]) and at lower rate in the Presentation context ($\beta$ = `r e1_contrasts_act$prop[4]`, [`r e1_contrasts_act$hdi_lower[4]`, `r e1_contrasts_act$hdi_upper[4]`]), with the null value of zero difference condition falling well outside the 95% HDI, and at similar rate in the Performance condition ($\beta$ = `r e1_contrasts_act$prop[3]`, [`r e1_contrasts_act$hdi_lower[3]`, `r e1_contrasts_act$hdi_upper[3]`]) with the 95% HDI including the null.
 
@@ -255,7 +255,7 @@ ms_rt_e1 <- d_models$rt_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 1) 
 ```
 
-We analyzed decision times, which were the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space), using the same model specification as action decisions. Figure \ref{fig:e1_behav_results_plot}A shows the full RT data distribution. Compared to the No-Goal condition ($M$= `r e1_contrasts_rt$rt[2]` seconds), participants took on on average `r e1_contrasts_rt$rt[1]` (`r e1_contrasts_rt$hdi_lower[1]`, `r e1_contrasts_rt$hdi_upper[1]`) seconds longer to generate a decision in the Learning condition. In contrast, participants in the Performance and Presentation conditions produced similar decision times.
+We analyzed decision times, which were the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space), using the same model specification as action decisions. Fig \ref{fig:e1_behav_results_plot}A shows the full RT data distribution. Compared to the No-Goal condition ($M$= `r e1_contrasts_rt$rt[2]` seconds), participants took on on average `r e1_contrasts_rt$rt[1]` (`r e1_contrasts_rt$hdi_lower[1]`, `r e1_contrasts_rt$hdi_upper[1]`) seconds longer to generate a decision in the Learning condition. In contrast, participants in the Performance and Presentation conditions produced similar decision times.
 
 ### Belief change:
 
@@ -289,8 +289,8 @@ e1_ent_means <- d_models$ent_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We quantified participants’ beliefs about the possible toy designs using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
-We modeled change in entropy as a function of goal condition and participants' action choices: \texttt{$entropy\_change \sim goal\_condition + action\_response$} (see Figure \ref{fig:e1_behav_results_plot}C). Across all conditions, people who selected the single action showed a greater reduction in entropy ($\beta$ = `r e1_contrasts_ent$ent_change[5]`, [`r e1_contrasts_ent$hdi_lower[5]`, `r e1_contrasts_ent$hdi_upper[5]`], i.e., learned more from their action. We did not see evidence of an interaction between goal condition and action selection. However, recall that a larger proportion of participants selected the single action in the Learning context, so the probability of learning is higher in this scenario.
+We quantified participants’ beliefs about the toy using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
+We modeled change in entropy as a function of goal condition and participants' action choices: \texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig \ref{fig:e1_behav_results_plot}C). Across all conditions, people who selected the single action showed a greater reduction in entropy ($\beta$ = `r e1_contrasts_ent$ent_change[5]`, [`r e1_contrasts_ent$hdi_lower[5]`, `r e1_contrasts_ent$hdi_upper[5]`], i.e. learned more from their action. We did not see evidence of an interaction between goal and action selection. However, a larger proportion of participants selected a single action in the Learning context, so learning was more likely in this scenario.
 
 ```{r e2_results, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.4, out.width= "95%", fig.align='center', fig.cap = "Behavioral and model fitting results for E2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Figure 3."}
 png::readPNG(here::here(image_path, "e2_plot_wBDA.png")) %>%
@@ -329,7 +329,7 @@ Using the same recruitment and exclusion criteria as E1, we recruited `r n_run_e
 
 ### Stimuli and Design
 
-The stimuli and design were identical to E1, except we had 7 different goal $\times$ social conditions. Goals remained identical to E1; social context varied depending on whether the boss was present in the cover story (*social*) or absent (*no-social*). Thus, the seven conditions were: *Social-learning*, *Social-performance*, *Social-presentation*, *No-social-no-goal*, *No-social-learning*, *No-social-performance*, and *Social-no-goal*. Note that we did not have *No-social-presentation* condition, because the presentation goal was defined by presenting oneself as competent to another person.  
+The stimuli and design were identical to E1, except we had 7 different goal $\times$ social conditions. Goals were identical to E1; social context varied depending on whether the boss was present (*social*) or absent (*no-social*) in the story. The conditions were: *Social-learning*, *Social-performance*, *Social-presentation*, *No-social-no-goal*, *No-social-learning*, *No-social-performance*, and *Social-no-goal*. Note that we did not have *No-social-presentation* condition, because the presentation goal was defined by presenting oneself as competent to another person.  
 
 ### Procedure
 
@@ -377,7 +377,7 @@ ms_act_e2 <- d_models$action_logit_samples_e2 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 2) 
 ```
 
-We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the no-goal-no-social condition as the reference category. We replicated the key finding from E1: participants selected a "single" action more often when they were in a context that emphasized a learning goal, followed by the no-goal, performance, and presentation conditions (see Fig \ref{fig:e2_results}A). There was a main effect of social context, with participants being less likely to select the single action when their boss was present ($\beta =$ `r e2_contrasts_act_soc$prop[5]`, [`r e2_contrasts_act_soc$hdi_lower[5]`, `r e2_contrasts_act_soc$hdi_upper[5]`]). Finally, there was evidence for a reliable interaction between goal condition and social context such that the effect of social context was present in the Learning and No-Goal conditions, but not in the Performance condition ($\beta$ $_{int}$ = `r e2_contrasts_act$prop[4]`, [`r e2_contrasts_act$hdi_lower[4]`, `r e2_contrasts_act$hdi_upper[4]`]).
+We modeled action decisions using a logistic regression specified as \texttt{$action \sim goal\_condition * social\_context$} with the no-goal-no-social condition as the reference category. We replicated the key finding from E1: participants selected a "single" action more often when they were in a context that emphasized a learning goal, followed by the no-goal, performance, and presentation conditions (Fig \ref{fig:e2_results}A). There was a main effect of social context, with participants being less likely to select the single action when their boss was present ($\beta =$ `r e2_contrasts_act_soc$prop[5]`, [`r e2_contrasts_act_soc$hdi_lower[5]`, `r e2_contrasts_act_soc$hdi_upper[5]`]). Finally, there was evidence for a reliable interaction between goal condition and social context such that the effect of social context was present in the Learning and No-Goal conditions, but not in the Performance condition ($\beta$ $_{int}$ = `r e2_contrasts_act$prop[4]`, [`r e2_contrasts_act$hdi_lower[4]`, `r e2_contrasts_act$hdi_upper[4]`]).
 
 ### Action decision times:
 
@@ -405,7 +405,7 @@ ms_rt_e2 <- d_models$rt_samples_e2 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 3) 
 ```
 
-We replicated the key decision time finding from E1, with participants making slower decisions in the Learning context as compared to Performance/Presentation. On average, participants took `r ms_rt_e2$m[2]` seconds to generate a response in the No-goal condidition and `r ms_rt_e2$m[1]` seconds in the Learning condition. In contrast, decisions were faster in the Performance ($\beta$ = `r e2_contrasts_rt$rt[3]` sec, [`r e2_contrasts_rt$hdi_lower[3]`, `r e2_contrasts_rt$hdi_upper[3]`]) and Presentation (`r e2_contrasts_rt$rt[4]` seconds, [`r e2_contrasts_rt$hdi_lower[4]`, `r e2_contrasts_rt$hdi_upper[4]`]) conditions, which were similar to one another (see Fig \ref{fig:e2_results}B). There was no evidence of a main effect of social context or an interaction between goal condition and social context. Note that here we did not see a difference in decision times between the Learning and No-Goal conditions, which is different from the pattern in E1.
+We replicated the key decision time finding from E1, with participants making slower decisions in the Learning context as compared to Performance/Presentation. On average, participants took `r ms_rt_e2$m[2]` seconds to generate a response in the No-goal condidition and `r ms_rt_e2$m[1]` seconds in the Learning condition. In contrast, decisions were faster in the Performance ($\beta$ = `r e2_contrasts_rt$rt[3]` sec, [`r e2_contrasts_rt$hdi_lower[3]`, `r e2_contrasts_rt$hdi_upper[3]`]) and Presentation (`r e2_contrasts_rt$rt[4]` seconds, [`r e2_contrasts_rt$hdi_lower[4]`, `r e2_contrasts_rt$hdi_upper[4]`]) conditions, which were similar to one another (Fig \ref{fig:e2_results}B). There was no evidence of a main effect of social context or an interaction between goal condition and social context. Note that here we did not see a difference in decision times between the Learning and No-Goal conditions, which is different from the pattern in E1.
 
 ### Belief change:
 
@@ -484,14 +484,14 @@ data_mod <- left_join(postpred, d_e2_pred)
 cor2 = round(with(data_mod, cor(data_prob, prob, use="na.or.complete"))^2,3)
 ```
 
-In our paradigm, participants were instructed to choose an action\footnote{For action priors, we used a separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals. The results suggested that none of the action choice priors statistically differed from chance. We used mean likelihood for each action choice as baseline priors in our model.} based on a certain goal. 
-We assumed that the goal descriptions (e.g. "impress your boss") conveyed to the participants a particular set of goal weights {$\phi_{learn}$, $\phi_{perf}$, $\phi_{pres}$} used to generate action choices. We put uninformative priors on these weights ($\phi \sim Unif(0,1)$) and inferred their credible values separately for each social-goal condition, using Bayesian data analytic techniques [@lee2014bayesian]. 
+In our paradigm, participants chose an action based on a certain goal.\footnote{For action priors, we used a separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals. The results suggested that none of the action choice priors statistically differed from chance. We used mean likelihood for each action choice as baseline priors in our model.}
+We assumed that the goal descriptions (e.g. "impress your boss") conveyed to the participants a particular set of goal weights {$\phi_{learn}$, $\phi_{perf}$, $\phi_{pres}$} used to generate action choices. We put uninformative priors on these weights ($\phi \sim Unif(0,1)$) and inferred their credible values for each social-goal condition, using Bayesian data analytic techniques [@lee2014bayesian]. 
 
-The inferred goal weights were consistent with what we predicted (see Figure \ref{fig:e2_results}D). $\phi_{learn}$ was at its highest for no-social learning condition, in which the goal to learn was highlighted, and there was minimum social pressure. On the other hand, the $\phi_{perf}$ and $\phi_{pres}$ together make up the highest portion in the presentation condition, with high social pressure to present competence, compared to other conditions.
+The inferred goal weights were consistent with what we predicted (Figure \ref{fig:e2_results}D). $\phi_{learn}$ was at its highest for no-social learning condition, in which the goal to learn was highlighted, and there was minimum social pressure. On the other hand, the $\phi_{perf}$ and $\phi_{pres}$ together make up the highest portion in the presentation condition, with high social pressure to present competence, compared to other conditions.
 
 We also inferred another parameter of the cognitive model, the optimality parameter $\lambda$. We put uninformative prior on the parameter ($\lambda \sim Uniform(0,10)$ and inferred its posterior credible value from the data. We ran 4 MCMC chains for 100,000 iterations, discarding the first 50,000 for burnin. The Maximum A- Posteriori (MAP) estimate and 95% Highest Probability Density Interval (HDI) for $\lambda$ was `r optimality$mean` [`r optimality$ci_lower`, `r optimality$ci_upper`]. 
 
-The predictions of the action choices according to the fitted learner model are shown in Figure \ref{fig:e2_results}A (bottom). The model's expected posteriors over action choices capture key differences between conditions: the single action was more likely for no-social than social conditions overall, but not when the performance goal was highlighted. The model was able to predict the distribution of action responses with high accuracy $r^2(21)$ = `r cor2`.
+The fitted model predictions of action choices are shown in Fig \ref{fig:e2_results}A (bottom). The model's expected posteriors over action choices capture key differences between conditions: the single action was more likely for no-social than social conditions overall, but not when the performance goal was highlighted. The model was able to predict the distribution of action responses with high accuracy $r^2(21)$ = `r cor2`.
 
 # General Discussion
 
@@ -500,9 +500,9 @@ How do social contexts shape active learning? We proposed that people integrate 
 This work represents a way to bring active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice that maximizes utility with respect to information gain, and Bayesian modeling framework, which formalizes a process of recursive social reasoning. This step allowed us to include social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of multiple goals -- informational and social. 
 
 There are limitations to this work that present opportunities for future work. 
-First, we did not differentiate between performance and presentation goals in the current work. That is, the choice of doing both actions satisfies both performance and presentational goals. Future work enriching the space of possible actions can tease apart actions driven by self-presentation. 
-Second, we used a very particular social context -- the presence of a boss -- to influence people’s action choices. It remains an open question as to how these results would generalize to other kinds of observers that hold different goals. One particularly compelling contrast would be to a teacher who wants the learner to select actions that help her learn. 
-Third, we limited people to a single action choice. While this allowed us to get a clean measurement of our goal and social context manipulations, real-world learning often involves a process of sequential decision-making that could cause learners to priortize different goals depending on their own prior actions and/or the probability of interacting with an observer in the future.
+First, we did not differentiate between performance and presentation goals, since the choice of doing both actions satisfies both of these goals. Future work enriching the space of possible actions can tease apart actions driven by self-presentation. 
+Second, we used a very particular social context (the presence of a boss) to influence people’s action choices. It remains an open question as to how our results would generalize to other kinds of observers with different goals (e.g. a teacher who wants the learner to select actions that help her learn). 
+Third, we limited people to a single action choice. While this allowed a clean measurement of our condition manipulations, real-world learning often involves sequential decision-making that could cause learners to prioritize different goals depending on their prior actions or the probability of interacting with an observer in the future.
 
 Another interesting open question is how our model could be used to understand active learning over development. Our framework would in principle allow us to measure changes in children's goal preferences as they develop more sophisticated social reasoning and better meta-cognitive abilities. One prediction is that young children focus on learning goals earlier in development when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals.
 
@@ -511,7 +511,7 @@ ultimately seek to unify theories on active learning and social reasoning.
 
 # Acknowledgements
 
-This work was supported by NSERC postgraduate doctoral scholarship PGSD3-454094-2014 to EJY and an NSF GRFP to KM.
+This work was supported by an NSERC postgraduate doctoral scholarship to EJY and an NSF GRFP to KM.
 
 # References 
 
@@ -519,7 +519,6 @@ This work was supported by NSERC postgraduate doctoral scholarship PGSD3-454094-
 # References will be generated automatically by Pandoc and included here.
 # The following code is some latex to format the bibliography. Do not remove it.
 ```
-
 \setlength{\parindent}{-0.1in} 
 \setlength{\leftskip}{0.125in}
 
