--- a/writing/cogsci2018/cogsci2018.Rmd
+++ b/writing/cogsci2018/cogsci2018.Rmd
@@ -8,7 +8,7 @@ author-information: >
     \author{{\large \bf Erica J. Yoon*}, {\large \bf Kyle MacDonald*}, {\large \bf Mika Asaba}, {\large \bf Hyowon Gweon}, \and {\large \bf Michael C. Frank} \\ \{ejyoon, kylem4, masaba, hyo, mcfrank\} @stanford.edu \\ Department of Psychology, Stanford University \\ *These authors contributed equally to this work.}
 
 abstract: 
-    "Our actions shape what we learn. Recent work suggests that people engage in efficient self-directed learning to maximize information gain. However, human learning often unfolds in social contexts where learners not only face informational goals (e.g. learn how something works) but also social goals (e.g. appear competent and impress others). How do these factors shape learners' decisions? Here, we present a computational model that integrates the value of social and information goals to predict the decisions that people will make in a simple active causal learning task. We show that an emphasis on performance or self-presentation goals leads to reduced chances of learning (E1) and that social context can push learners to pursue performance-oriented actions even when the learning goal is highlighted (E2). Our formal model of social-active learning successfully captures the empirical results. These findings are the first steps towards understanding the role of social reasoning in active learning contexts."
+    "Our actions shape what we learn. Recent work suggests that people engage in efficient self-directed learning to maximize information gain. However, human learning often unfolds in social contexts where learners not only face informational goals (e.g., learn how something works) but also social goals (e.g., appear competent and impress others). How do these factors shape learners' decisions? Here, we present a computational model that integrates the value of social and information goals to predict the decisions that people will make in a simple active causal learning task. We show that an emphasis on performance or self-presentation goals leads to reduced chances of learning (E1) and that social context can push learners to pursue performance-oriented actions even when the learning goal is highlighted (E2). Our formal model of social-active learning successfully captures the empirical results. These findings are the first steps towards understanding the role of social reasoning in active learning contexts."
     
 keywords:
     "active learning; social reasoning; information gain; OED; self-presentation; goal tradeoffs"
@@ -46,48 +46,35 @@ While the familiar recipe can ensure a good meal,
 you may miss out on a new, delicious dish. 
 The new recipe might taste even better, but it has a higher chance of failure. 
 In such *explore-exploit* dilemma [@sutton1998], you can choose between 
-*exploiting* your previous experience and knowledge to ensure a good meal (*performance* goal),
-or *exploring* the new recipe that may or may not result in a more delicious dish (*learning* goal).
-Here, we explore the idea of this learning-performance goal tradeoff in a simple active learning context, 
+*exploring* the new recipe that may or may not result in a more delicious dish (*learning* goal),
+or *exploiting* your previous experience and knowledge to ensure a good meal (*performance* goal).
+Here, we explore the idea of formalizing the learning-performance goal tradeoff using a simple active learning context, 
 where social factors may shape the goals we consider.
 
-Active learning occurs when people have control over the sequence of information in a learning context (e.g. try pressing buttons on a toy, one by one, to see their effect). The key assumption is learners will maximize the usefulness of their actions by gathering information that is especially helpful for their own learning. 
+Active learning occurs when people have control over the sequence of information in a learning context (e.g., try pressing buttons on a toy, one by one, to see their effect). The key assumption is learners will maximize the usefulness of their actions by gathering information that is especially helpful for their own learning. 
 Active contexts lead to faster learning than passive contexts where people don't have control over the information flow, as suggested by empirical work in education [@grabinger1995rich], machine learning [@settles2012active], and cognitive psychology [@castro2009human]. 
 
 But real-world learning usually takes place in rich social contexts 
 with teachers, peers, or other people who can directly influence our learning. 
 Indeed, children and adults seem to modulate their inferences 
-depending on whether evidence is generated on their own or by others [e.g. @xu2007]; 
-whether they observe intentional versus accidental actions [@carpenter1998fourteen]; and whether they believe another person selected their actions with the goal of helping them learn [i.e. teaching; @shafto2012learning]. 
+depending on whether evidence is generated on their own or by others [e.g., @xu2007]; 
+whether they observe intentional versus accidental actions [@carpenter1998fourteen]; and whether they believe another person selected their actions with the goal of helping them learn [i.e., teaching; @shafto2012learning]. 
 But even when we learn from *our* own actions instead of others', our social environment may affect our self-directed learning process.
 While previous models have captured how we optimize learning, either from our own actions or from others, they have been agnostic to other social factors that are ubiquitous in a learner's environment. 
-People must integrate the value of social goals (e.g. looking competent or knowledgeable) and information goals when deciding what to do next. 
+People must integrate the value of social goals (e.g., looking competent or knowledgeable) and information goals when deciding what to do next. 
 
 How can active learning models accommodate this richer set of utilities? 
 As a step towards answering this question, we model a learner who considers a mixture of learning and performance goals. 
 A key assumption underlying recent Bayesian models of human social cognition is that 
-people expect others to act approximately optimally given a utility function [e.g. @goodman2016; @jara2016]. 
+people expect others to act approximately optimally given a utility function [e.g., @goodman2016; @jara2016]. 
 Our model adopts the same utility-theoretic approach, and assumes an agent who reasons about the utility function that represents a weighted combination of multiple goals [@yoon2017] in a social active learning context. 
 
-We instantiate our model in a simple causal learning task and 
-examine how people choose actions that support learning vs. social goals. 
-We present a toy with an uncertain causal mechanism (Fig \ref{fig:toy}), 
-for which doing only one of the two possible actions (handle pull or button press) is disambiguating but potentially risks no immediate effect (i.e. neither sound nor light turning on), 
-while doing both actions simultaneously is immediately rewarding but is not informative for learning the toy's causal mechanism. Thus, the learner can choose between the two actions
-that will each lead to one outcome (new discovery; learning) or the other (immediate reward; performance).
-The learner's action rests on relative utilities he assigns to exploration versus exploitation, 
-which in turn are determined in part by the social context (e.g. the presence or absence of his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.} 
-
-In two experiments, we show that emphasizing performance or self-presentation goals leads to actions that are not informative and thus reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to pursue performance/presentation actions even when the learning goal is highlighted (E2). Finally, we show that the empirical results are consistent with predictions of our cognitive model of social-active learning.
-
-# Computational model
-
-```{r toy, fig.env = "figure", fig.pos = "t", fig.align='center', fig.width=2, fig.height=1.5, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
+```{r toy, fig.env = "figure", fig.pos = "b", fig.align='center', fig.width=2, fig.height=1.5, num.cols.cap=1, out.width='65%', fig.cap = "An example of the toy used in our paradigm."}
 img <- png::readPNG("figs/toywlabel.png")
 grid::grid.raster(img)
 ```
 
-```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Diagram of the computational model. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his contextual goals. When an observer is absent, he considers his learning goal (to maximize information gain) and performance goal (e.g. to play music) and decides on an action. The learning goal favors a single action (e.g. pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, his decision for an action is based on his learning goal vs. presentational goal (to have the observer infer his competence or knowledge of how the toy works)."}
+```{r model_diagram, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Diagram of the computational model. The learner considers possible hypotheses: Toy 1 (handle pull turns on the light, button press turns on music, both actions cause both effects); Toy 2 (handle pull turns on music, button press turns on the light, both actions cause both effects); and Toy 3 (both actions cause both effects, but each action on its own does not produce any effect). The learner also considers his goals. When an observer is absent, he considers his learning goal and performance goal and chooses an action. The learning goal favors a single action (e.g., pull the handle only) that can fully disambiguate, whereas the performance goal favors the both action (pull the handle AND push the button) that guarantees the most salient reward. When an observer is present, the learner considers the learning, performance (not shown), and presentational goal."}
 img1 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsAbs.png"))), 
                     interpolate = FALSE)
 
@@ -97,51 +84,55 @@ img2 <- rasterGrob(as.raster(readPNG(here(image_path, "model-obsPres.png"))),
 grid.arrange(img1, img2, ncol = 2)
 ```
 
-We model a learner's action choice based on 
-his goal to learn how a toy works (*learning utility*), 
-to make the toy perform a function (*performance utility*), 
-or to present himself as competent and knowledgeable about how the toy works (*presentational utility*; see Fig \ref{fig:model_diagram}).
+We instantiate our model in a simple causal learning task and 
+examine how people choose actions that support learning vs. performance goals in different social contexts. 
+We present a toy with an uncertain causal mechanism (Fig \ref{fig:toy}). 
+For this toy, doing only one of the two possible actions (handle pull or button press) disambiguates its causal mechanism but potentially risks no immediate effect (i.e., neither sound nor light turning on),
+while doing both actions at the same time is immediately rewarding but is not informative for learning the toy's causal mechanism. 
+Thus, the learner can choose between the two actions
+that will each lead to one outcome (new discovery; learning) or the other (immediate reward; performance).
+The learner's action rests on relative utilities he assigns to exploration versus exploitation, 
+which in turn are determined in part by the social context (e.g., the presence or absence of his boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.} 
+
+In two experiments, we show that emphasizing performance or self-presentation (social) goals leads to actions that are not informative and thus reduce the chances of learning (E1). Next, we show that the presence of an observer (i.e., a boss) pushes learners to pursue performance/presentation-oriented actions even when the learning goal is highlighted (E2). Finally, we show that the empirical results are consistent with predictions of our cognitive model of social-active learning.
+
+# Computational model
+
+We model a learner $L$ who chooses his action $a$ approximately optimally (as per optimality $\lambda$) based on the expected total utility $U_{t}$ given his action and observer presence.
+$$ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{total}(a,o)])$$ 
+$$U_{t}(a,o) = \phi_{learn} \cdot U_{learn}(a) + \phi_{perf} \cdot U_{perf}(a) + \delta^o \cdot \phi_{pres} \cdot U_{pres}(a)$$
+\noindent
+where $\phi$s are weights that are inferred for each utility from data and
+$\delta^o$ a dirac function that is 1 if there is an observer, and 0 if there is no observer.
+Below we describe each utility structure (see Fig \ref{fig:model_diagram} for a visual schematic of the model).
 
 ### Learning utility
 
-The *learning utility* symbolizes the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956; @coenen2017], which quantifies the *expected utility* of different information seeking actions. 
-The learner considers the hypothesis space $H$, and wants to determine the correct hypothesis. He thinks about the utility of the answer to each possible query (realized through taking an action), which is equal to the *information gain*: the change in the learner's overall uncertainty (difference in entropy) before and after receiving an answer. 
-This information gain is equal to the expected learning utility ($U_{learn}$):
-$$ U_{learn} = U(a) = \frac{ent(H) - ent(H|a)}{log_2n}$$
+The *learning utility* symbolizes the goal to learn new information, which in our paradigm is associated with figuring out how a given toy works. The learning utility is formally represented by an OED model ["Optimal Experiment Design"; @nelson2005; @lindley1956], which quantifies the expected utility of different information seeking actions. 
+The learner considers the hypothesis space $H$, and wants to determine the correct hypothesis. He thinks about the utility of the outcome $m$ to each possible action, which is equal to the *information gain*: the change in the learner's overall uncertainty (difference in entropy) before and after seeing the outcome. 
+This information gain is equal to the learning utility ($U_{learn}$), which is the expected utility of each action:
+$$ U_{learn}(a) = \sum_{\{m, \neg m\}}{P(m|a)}[{ent(H) - ent(H|m,a)}]$$
 \noindent
-where $ent(H)$ is the Shannon entropy of $H$, which provides a measure of the overall amount of uncertainty in the learner's beliefs about the candidate hypothesis[@mackay2003].
-Once the learner chooses a query $Q$, which yields an answer $a$, 
+where $ent(H)$ is the Shannon entropy of $H$, which provides a measure of the overall amount of uncertainty in the learner's beliefs about the candidate hypothesis [@mackay2003].
+Once the learner chooses an action $a$, which yields an effect $m$ (or no effect $\neg m$), 
 then he updates his beliefs about each hypothesis via standard Bayesian updating. 
-Finally, the difference in entropy is normalized by $log_2 n$, where $n$ is the number of possible actions, to convert the entropy to a value between 0 and 1.
+Finally, we scale the utility by $log_2n$, where $n$ is the number of possible actions, to convert the entropy to a value between 0 and 1.
 
 ### Performance utility
 
 The *performance utility* is the utility of achieving an immediate rewarding outcome. 
 Within our paradigm, the learner gains utility from an immediate effect of music or light turning on. 
-The expected performance utility ($U_{perf}$) before the learner chooses an action is the likelihood of an effect $m$ given the learner's action $a$.
+The expected performance utility ($U_{perf}$) before the learner chooses an action is the likelihood of an effect $m$ given the action $a$.
 $$ U_{perf} = P_L(m | a) $$
 \noindent
 
-When there is no observer present ($obs = no$), the learner considers the tradeoff between the learning utility and performance utility, and he determines his action based on a weighted combination of the two utilities: 
-$$ U(\phi; obs = no) = \phi_{learn} \cdot U_{learn} + \phi_{perf} \cdot U_{perf} ,$$
-\noindent
-where $\phi$ is how much value the learner places on each goal. 
-
 ### Presentation utility
 
-When there is another person present to observe the learner's action, the observer $O$ is expected to reason about the learner $L$'s competence $c$, equal to whether the learner was able to make the toy produce an effect.
+When there is another person present to observe the learner's action, the observer $O$ is expected to reason about the learner $L$'s competence, equal to whether the learner was able to make the toy produce an effect.
 The learner thinks about the observer's inferential process, and the expected *presentational* utility ($U_{pres}$) is based on maximizing the apparent competence inferred by the observer.
-$$ P_O(c) \propto P_L(m | a)$$
-$$ U_{pres} = P_O(c)$$
+$$ U_{pres} = P_O(m | a)$$
 \noindent
-
-When there is an observer present ($obs = yes$), the learner considers the tradeoff between all three utilities: the learning utility, performance utility and presentational utility: 
-$$ U(\phi; obs = yes) = \phi_{learn} \cdot U_{learn} + \\ \phi_{perf} \cdot U_{perf} + \phi_{pres} \cdot U_{pres}$$
-\noindent
-
-The learner $L$ chooses his action $a$ approximately optimally (as per optimality $\lambda$) based on the expected utility given his goal weights and observer presence.
-$$ P_L(a | \phi, obs) \propto \exp(\lambda \cdot \mathbb{E}[U(\phi; obs)])$$
-\noindent
+where $P_O(m | a)$ is the observer's own estimate of the likelihood of an effect given the learner's action.
 
 # Experiment 1
 
@@ -149,9 +140,9 @@ $$ P_L(a | \phi, obs) \propto \exp(\lambda \cdot \mathbb{E}[U(\phi; obs)])$$
 d_e1 <- d %>% filter(str_detect(experiment, "e1"))
 ```
 
-In Experiment 1 (E1), we first wanted to confirm that participants would choose different actions depending on what goal was highlighted. We were also interested in how people would act when no explicit goal was specified within the task. Participants were asked to act on a toy with an uncertain causal mechanism, and were assigned to different goal conditions: (1) learning (learn how the toy works), (2) performance (make the toy play music), (3) presentation (impress their boss), and (4) no goal specified. We hypothesized that participants would choose an informative action more often in the following order of goal conditions (decreasing): learning, no goal, performance, and presentation.\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection on the Open Science Framework (https://osf.io/kcjau). All experiments, data, model scripts, and analysis codes for the statistical models can be found in the online repository for this project: https://github.com/kemacdonald/soc-info.}
+In Experiment 1 (E1), we first wanted to confirm that participants would choose different actions depending on what goal was highlighted. We were also interested in how people would act when no explicit goal was specified within the task. Participants were asked to act on a toy with an uncertain causal mechanism, and were assigned to different goal conditions: (1) learning (learn how the toy works), (2) performance (make the toy play music), (3) presentation (impress their boss), and (4) no goal specified. We hypothesized that participants would choose an informative action more often in the following order of goal conditions (decreasing): learning, no goal, performance, and presentation.\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection at \url{https://osf.io/kcjau}.}
 
-```{r e1_behav_results_plot, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Behavioral results for E1. A: Proportion of action decisions for each goal condition. Error bars represent 95\\% binomial confidence intervals computed using a Bayesian beta-binomial model. B: Participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Participants' belief change (entropy; information gain in bits) as a function of condition. Lower values represent higher certainty after selecting an action."}
+```{r e1_behav_results_plot, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.7, out.width= "95%", fig.align='center', fig.cap = "Behavioral results for E1. A: Proportion of action decisions for each goal condition. Error bars represent 95\\% binomial CIs computed using a Bayesian beta-binomial model. B: Participants' response times on the action decisions. Each point represents a participant with the width of the violin representing the density of the data at that value. C: Participants' belief change (entropy in bits) as a function of condition. Lower values represent higher certainty after selecting an action."}
 png::readPNG(here::here(image_path, "e1_plot.png")) %>% 
   grid::grid.raster()
 ```
@@ -187,7 +178,7 @@ We asked participants to act on one of these toys; importantly, the given toy wa
 
 ### Procedure
 
-In the *exposure phase*, we showed participants an example toy and gave instructions for three toy types. We first presented the instructions for the single action toys (Toy 1 and Toy 2) in a randomized order, and then presented the instructions for the both action toy (Toy 3). After instructions, participants indicated what action would make each toy operate (e.g. "How would you make [this] toy play music?") to show that they understood how the different toys worked. 
+In the *exposure phase*, we showed participants an example toy and gave instructions for three toy types. We first presented the instructions for the single action toys (Toy 1 and Toy 2) in a randomized order, and then presented the instructions for the both action toy (Toy 3). After instructions, participants indicated what action would make each toy operate (e.g., "How would you make [this] toy play music?") to show that they understood how the different toys worked. 
 
 In the *test phase*, participants read a scenario for one of the four goal conditions, followed by the question: "If you only had one chance to try a SINGLE action [to pursue the specified goal], which action would you want to take? You will get a 10 cent bonus ... if you [achieve the given goal]". 
 
@@ -227,8 +218,6 @@ We modeled action decisions using a logistic regression \texttt{$action \sim goa
 
 Compared to the No-goal condition, participants selected the single action at a greater rate in the Learning condition ($\beta$ = `r e1_contrasts_act$prop[1]`, [`r e1_contrasts_act$hdi_lower[1]`, `r e1_contrasts_act$hdi_upper[1]`]) and at lower rate in the Presentation context ($\beta$ = `r e1_contrasts_act$prop[4]`, [`r e1_contrasts_act$hdi_lower[4]`, `r e1_contrasts_act$hdi_upper[4]`]), with the null value of zero difference condition falling well outside the 95% HDI, and at similar rate in the Performance condition ($\beta$ = `r e1_contrasts_act$prop[3]`, [`r e1_contrasts_act$hdi_lower[3]`, `r e1_contrasts_act$hdi_upper[3]`]) with the 95% HDI including the null.
 
-TODO_KM: add pairwise comparisons of preformance/presentation and performance/no-goal.
-
 ### Action decision times:
 
 ```{r rt contrasts e1}
@@ -255,7 +244,7 @@ ms_rt_e1 <- d_models$rt_samples_e1 %>%
   mutate_if(.predicate = is.numeric, .funs = round, digits = 1) 
 ```
 
-We analyzed decision times, which were the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space), using the same model specification as action decisions. Fig \ref{fig:e1_behav_results_plot}A shows the full RT data distribution. Compared to the No-Goal condition ($M$= `r e1_contrasts_rt$rt[2]` seconds), participants took on on average `r e1_contrasts_rt$rt[1]` (`r e1_contrasts_rt$hdi_lower[1]`, `r e1_contrasts_rt$hdi_upper[1]`) seconds longer to generate a decision in the Learning condition. In contrast, participants in the Performance and Presentation conditions produced similar decision times.
+We analyzed decision times, which were the latency to make an action selection as measured from the start of the action decision trial (all RTs were analyzed in log space), using the same model specification as action decisions. Fig \ref{fig:e1_behav_results_plot}A shows the full RT data distribution. Compared to the No-Goal condition ($M$= `r e1_contrasts_rt$rt[2]` seconds), participants took on on average `r e1_contrasts_rt$rt[1]` (`r e1_contrasts_rt$hdi_lower[1]`, `r e1_contrasts_rt$hdi_upper[1]`) seconds longer to generate a decision in the Learning condition. In contrast, participants in the Performance and Presentation conditions produced similar decision times. 
 
 ### Belief change:
 
@@ -290,9 +279,9 @@ e1_ent_means <- d_models$ent_samples_e1 %>%
 ```
 
 We quantified participants’ beliefs about the toy using entropy, and belief change was measured as the difference in entropy before and after selecting an action.
-We modeled change in entropy as a function of goal condition and participants' action choices: \texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig \ref{fig:e1_behav_results_plot}C). Across all conditions, people who selected the single action showed a greater reduction in entropy ($\beta$ = `r e1_contrasts_ent$ent_change[5]`, [`r e1_contrasts_ent$hdi_lower[5]`, `r e1_contrasts_ent$hdi_upper[5]`], i.e. learned more from their action. We did not see evidence of an interaction between goal and action selection. However, a larger proportion of participants selected a single action in the Learning context, so learning was more likely in this scenario.
+We modeled change in entropy as a function of goal condition and participants' action choices: \texttt{$entropy\_change \sim goal\_condition + action\_response$} (Fig \ref{fig:e1_behav_results_plot}C). Across all conditions, people who selected the single action showed a greater reduction in entropy ($\beta$ = `r e1_contrasts_ent$ent_change[5]`, [`r e1_contrasts_ent$hdi_lower[5]`, `r e1_contrasts_ent$hdi_upper[5]`], i.e., learned more from their action. We did not see evidence of an interaction between goal and action selection. However, a larger proportion of participants selected a single action in the Learning context, so learning was more likely in this scenario.
 
-```{r e2_results, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.4, out.width= "95%", fig.align='center', fig.cap = "Behavioral and model fitting results for E2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Figure 3."}
+```{r e2_results, include = T, fig.env = "figure*", fig.pos = "tb", fig.width=5, fig.asp = 0.4, out.width= "95%", fig.align='center', fig.cap = "Behavioral and model fitting results for E2. A: Action decisions with color representing social context, from human data (top) and fitted model predictions (bottom). B: Decision times. C: Belief change. D: Inferred phi values for each goal-context condition. All other plotting conventions are the same as Fig 3."}
 png::readPNG(here::here(image_path, "e2_plot_wBDA.png")) %>%
   grid::grid.raster()
 ```
@@ -484,30 +473,33 @@ data_mod <- left_join(postpred, d_e2_pred)
 cor2 = round(with(data_mod, cor(data_prob, prob, use="na.or.complete"))^2,3)
 ```
 
-In our paradigm, participants chose an action based on a certain goal.\footnote{For action priors, we used a separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals. The results suggested that none of the action choice priors statistically differed from chance. We used mean likelihood for each action choice as baseline priors in our model.}
-We assumed that the goal descriptions (e.g. "impress your boss") conveyed to the participants a particular set of goal weights {$\phi_{learn}$, $\phi_{perf}$, $\phi_{pres}$} used to generate action choices. We put uninformative priors on these weights ($\phi \sim Unif(0,1)$) and inferred their credible values for each social-goal condition, using Bayesian data analytic techniques [@lee2014bayesian]. 
+In our paradigm, participants chose an action based on a certain goal.\footnote{For action priors, we used a separate prior elicitation task, in which people indicated the likelihood for selecting an action without any background information about possible hypotheses or goals. We used mean likelihood for each action choice as baseline priors in our model.}
+We assumed that the goal descriptions (e.g., "impress your boss") conveyed to the participants a particular set of goal weights {$\phi_{learn}$, $\phi_{perf}$, $\phi_{pres}$} used to generate action choices. We put uninformative priors on these weights ($\phi \sim Unif(0,1)$) and inferred their credible values for each social-goal condition, using Bayesian data analytic techniques [@lee2014bayesian]. 
 
-The inferred goal weights were consistent with what we predicted (Figure \ref{fig:e2_results}D). $\phi_{learn}$ was at its highest for no-social learning condition, in which the goal to learn was highlighted, and there was minimum social pressure. On the other hand, the $\phi_{perf}$ and $\phi_{pres}$ together make up the highest portion in the presentation condition, with high social pressure to present competence, compared to other conditions.
+The inferred goal weights were consistent with what we predicted (Fig \ref{fig:e2_results}D). $\phi_{learn}$ was at its highest for No-social learning condition. On the other hand, the $\phi_{perf}$ and $\phi_{pres}$ together make up the highest portion in the presentation condition, with high social pressure to present competence compared to other conditions.
 
-We also inferred another parameter of the cognitive model, the optimality parameter $\lambda$. We put uninformative prior on the parameter ($\lambda \sim Uniform(0,10)$ and inferred its posterior credible value from the data. We ran 4 MCMC chains for 100,000 iterations, discarding the first 50,000 for burnin. The Maximum A- Posteriori (MAP) estimate and 95% Highest Probability Density Interval (HDI) for $\lambda$ was `r optimality$mean` [`r optimality$ci_lower`, `r optimality$ci_upper`]. 
+We also inferred another parameter of the cognitive model, the optimality parameter $\lambda$. We put uninformative prior on the parameter ($\lambda \sim Unif(0,10)$ and inferred its posterior credible value from the data. We ran 4 MCMC chains for 100,000 iterations, discarding the first 50,000 for burnin. The Maximum A- Posteriori (MAP) estimate and 95% Highest Probability Density Interval (HDI) for $\lambda$ was `r optimality$mean` [`r optimality$ci_lower`, `r optimality$ci_upper`]. 
 
 The fitted model predictions of action choices are shown in Fig \ref{fig:e2_results}A (bottom). The model's expected posteriors over action choices capture key differences between conditions: the single action was more likely for no-social than social conditions overall, but not when the performance goal was highlighted. The model was able to predict the distribution of action responses with high accuracy $r^2(21)$ = `r cor2`.
 
 # General Discussion
 
-How do social contexts shape active learning? We proposed that people integrate learning-, performance-, and presentation-oriented goals when deciding what to do. In two experiments, we showed that people chose more informative actions when learning goals were highlighted and in the absence of a relevant social context (no boss present), while they chose more immediately rewarding actions when performance or presentational goals were highlighted, especially when a boss was present. When no explicit goal was specified, people showed behavior that seemed to reflect a mixture of goals. Our model of social-active learning successfully captured key patterns in the behavioral data. 
+How do social contexts shape active learning? We proposed that people integrate learning-, performance-, and presentation-oriented goals when deciding what to do. In two experiments, we showed that people chose more informative actions, when learning goals were highlighted and in the absence of a relevant social context (no boss present), while they chose more immediately rewarding actions when performance or presentational goals were highlighted, especially when a boss was present. When no explicit goal was specified, people showed behavior that seemed to reflect a mixture of goals. Our model of social-active learning successfully captured key patterns in the participants' action decisions.  
 
-This work represents a way to bring active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice that maximizes utility with respect to information gain, and Bayesian modeling framework, which formalizes a process of recursive social reasoning. This step allowed us to include social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of multiple goals -- informational and social. 
+This work brought active learning accounts into contact with social learning theories. We used ideas from Optimal Experiment Design, which models active learning as a process of rational choice that maximizes information gain, and Bayesian modeling framework, which formalizes a process of recursive social reasoning. Thereby we could include social information within a formal utility-theoretic framework, building a richer utility function that represented a weighted combination of multiple goals -- informational and social. 
 
 There are limitations to this work that present opportunities for future work. 
 First, we did not differentiate between performance and presentation goals, since the choice of doing both actions satisfies both of these goals. Future work enriching the space of possible actions can tease apart actions driven by self-presentation. 
-Second, we used a very particular social context (the presence of a boss) to influence people’s action choices. It remains an open question as to how our results would generalize to other kinds of observers with different goals (e.g. a teacher who wants the learner to select actions that help her learn). 
+Second, we used a very particular social context (the presence of a boss) to influence people’s action choices. It remains an open question as to how our results would generalize to other kinds of observers with different goals (e.g., a teacher who wants the learner to select actions that help her learn). 
 Third, we limited people to a single action choice. While this allowed a clean measurement of our condition manipulations, real-world learning often involves sequential decision-making that could cause learners to prioritize different goals depending on their prior actions or the probability of interacting with an observer in the future.
 
-Another interesting open question is how our model could be used to understand active learning over development. Our framework would in principle allow us to measure changes in children's goal preferences as they develop more sophisticated social reasoning and better meta-cognitive abilities. One prediction is that young children focus on learning goals earlier in development when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals.
+Another interesting open question is how our model could be used to understand active learning over development. Our framework could allow us to measure changes in children's goal preferences as they develop better social reasoning and meta-cognitive abilities. One prediction is that young children focus on learning goals earlier on when they are surrounded by familiar caregivers who scaffold learning-relevant actions. But as their social reasoning abilities mature and their social environments become more complex, children may start to emphasize performance or presentation goals.
 
 Overall, this work represents a first step to answering these rich questions that 
 ultimately seek to unify theories on active learning and social reasoning.
+
+\vspace{1em} \fbox{\parbox[b][][c]{7.3cm}{\centering All data, model, and analysis codes are available at: \url{https://github.com/kemacdonald/soc-info}}} \vspace{1em}
+\noindent
 
 # Acknowledgements
 
